--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -2,10 +2,37 @@
 .product{
     width:300px;
     height:510px;
+    border:1px solid #95A0A7;
+    border-radius:8px;
+    padding:7px;
+    position:relative;
 }
 
 .product img{
     width:286px;
     height:286px;
+    border-radius: 8px;
+    margin:7px;
 
+}
+.product-info p{
+    margin:0;
+}
+.product-info{
+    margin: 0 14px;
+    margin-top: 5px;
+   
+
+}
+.btn-cart{
+    width:100%;
+    background:#FFE0B3;
+    border-radius:0px 0px 8px 8px;
+    border:none;
+    position:absolute;
+    bottom:0px;
+    right:1px;
+}
+.btn-cart:hover{
+    background-color: orange;
 }
