--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -25,6 +25,9 @@
 
 }
 .btn-cart{
+    display:flex;
+    align-items:center;
+    justify-content:center;
     width:100%;
     background:#FFE0B3;
     border-radius:0px 0px 8px 8px;
@@ -32,6 +35,9 @@
     position:absolute;
     bottom:0px;
     right:1px;
+}
+.btn-cart .btn-text{
+    margin-right: 5px;
 }
 .btn-cart:hover{
     background-color: orange;
